--- a/gradle.properties
+++ b/gradle.properties
@@ -9,15 +9,15 @@ yarn_mappings=1.18.1+build.22
 forge_version=39.1.2
 
 # Mod Properties
-mod_version=1.6.1
+mod_version=1.7.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-brrp_version=0.7.0
-reasonable_sorting_version=2.0.3
+brrp_version=0.8.1
+reasonable_sorting_version=2.1.0
 
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
