--- a/gradle.properties
+++ b/gradle.properties
@@ -4,6 +4,7 @@ org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.18.2
+supported_minecraft_versions=1.18.2
 yarn_mappings=1.18.2+build.4
 loader_version=0.14.10
 
