--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ loom.platform=forge
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.18.2
+supported_minecraft_versions=1.18.2
 yarn_mappings=1.18.2+build.4
 forge_version=40.1.85
 
