--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ loom.platform=forge
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19.2
+supported_minecraft_versions=1.19,1.19.1,1.19.2
 yarn_mappings=1.19.2+build.28
 forge_version=43.1.52
 
