--- a/gradle.properties
+++ b/gradle.properties
@@ -6,18 +6,18 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=22w45a
 supported_minecraft_versions=22w45a
 loader_version=0.14.10
-yarn_mappings=22w43a+build.5
-quilt_mappings=7
+yarn_mappings=22w45a+build.12
+quilt_mappings=3
 
 # Mod Properties
-mod_version=1.7.1
+mod_version=1.7.1-build.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
 fabric_version=0.66.0+1.19.2
 modmenu_version=5.0.0-alpha.2
-brrp_version=0.8.1
+brrp_version=0.8.1-build.1
 reasonable_sorting_version=2.1.0
 
 #loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
