--- a/gradle.properties
+++ b/gradle.properties
@@ -5,21 +5,21 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.18.2
 supported_minecraft_versions=1.18.2
+loader_version=0.14.11
 yarn_mappings=1.18.2+build.4
-loader_version=0.14.10
 
 # Mod Properties
-mod_version=1.7.1
+mod_version=1.8.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
 fabric_version=0.66.0+1.18.2
-modmenu_version=3.2.3
-brrp_version=0.8.1
+modmenu_version=3.2.+
+brrp_version=0.8.2
 reasonable_sorting_version=2.1.0
 
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
