--- a/gradle.properties
+++ b/gradle.properties
@@ -10,13 +10,13 @@ yarn_mappings=1.19.3+build.2
 quilt_mappings=1
 
 # Mod Properties
-mod_version=1.7.3
+mod_version=1.8.0-build.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
 fabric_version=0.68.1+1.19.3
-modmenu_version=5.0.0-alpha.4
+modmenu_version=5.+
 brrp_version=0.8.2
 reasonable_sorting_version=2.1.0
 
