--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,11 @@ repositories {
     maven { url 'https://maven.terraformersmc.com/releases/' }
     // 合理排序模组依赖的 Cloth Config
     maven { url "https://maven.shedaniel.me/" }
+    /*
+    这个是存储在 GitHub 上的 BRRP 模组
+    maven {
+        url 'https://raw.nuaa.cf/SolidBlock-cn/mvn-repo/main'
+    }*/
     // 合理排序和 BRRP 模组。这两个模组均存储于本地的 maven 仓库。
     mavenLocal()
 }
@@ -61,7 +66,7 @@ dependencies {
 
     // BRRP 模组
     def brrp_mc_version = project.properties.getOrDefault "brrp_mc_version", project.minecraft_version
-    modImplementation "net.devtech:brrp-fabric:${project.brrp_version}-${brrp_mc_version}"
+    modImplementation "pers.solid:brrp-fabric:${project.brrp_version}-${brrp_mc_version}"
     // 合理排序模组
     def reasonable_sorting_mc_version = project.properties.getOrDefault "reasonable_sorting_mc_version", project.minecraft_version
 //    modImplementation "pers.solid.mod:reasonable-sorting-fabric:${project.reasonable_sorting_version}-mc${reasonable_sorting_mc_version}"
@@ -116,6 +121,11 @@ publishing {
         // Notice: This block does NOT have the same function as the block in the top level.
         // The repositories here will be used for publishing your artifact, not for
         // retrieving dependencies.
+        maven {
+            // 将模块导出至本地另一个项目的位置中，该项目与 GitHub 项目关联。
+            // 随后，推送那个项目至 GitHub 上。
+            url = 'file:../mvn-repo'
+        }
     }
 }
 
