--- a/gradle.properties
+++ b/gradle.properties
@@ -6,11 +6,10 @@ org.gradle.jvmargs=-Xmx1G
 minecraft_version=1.19.3
 supported_minecraft_versions=1.19.3
 loader_version=0.14.11
-yarn_mappings=1.19.3+build.2
-quilt_mappings=1
+yarn_mappings=1.19.3+build.3
 
 # Mod Properties
-mod_version=1.8.0-build.1
+mod_version=1.8.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
