--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,19 @@ org.gradle.jvmargs=-Xmx1G
 loom.platform=forge
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop/
+# check these on https://linkie.shedaniel.me/dependencies
 minecraft_version=1.17.1
 supported_minecraft_versions=1.17.1
 yarn_mappings=1.17.1+build.65
 forge_version=37.1.1
 
 # Mod Properties
-mod_version=1.7.1
+mod_version=1.8.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-brrp_version=0.8.1
+brrp_version=0.8.2
 reasonable_sorting_version=2.1.0
 
 #loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
