--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,8 @@ loom.platform=forge
 # check these on https://files.minecraftforge.net/
 minecraft_version=1.19.3
 supported_minecraft_versions=1.19.3
-yarn_mappings=1.19.3+build.3
-forge_version=44.0.18
+yarn_mappings=1.19.3+build.5
+forge_version=44.1.23
 
 # Mod Properties
 mod_version=1.8.0
@@ -18,8 +18,8 @@ archives_base_name=extshape
 brrp_version=0.8.2
 reasonable_sorting_version=2.1.0
 
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-#loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 #loom_fabric_repository=https://repository.hanbings.io/proxy/
