--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.18.2
 supported_minecraft_versions=1.18.2
-loader_version=0.14.11
+loader_version=0.14.14
 yarn_mappings=1.18.2+build.4
 
 # Mod Properties
@@ -14,8 +14,8 @@ maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.66.0+1.18.2
-modmenu_version=3.2.+
+fabric_version=0.76.0+1.18.2
+modmenu_version=3.2.5
 brrp_version=0.8.2
 reasonable_sorting_version=2.1.0
 
