--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/
 minecraft_version=1.19.3
 supported_minecraft_versions=1.19.3
-loader_version=0.14.11
-yarn_mappings=1.19.3+build.3
+loader_version=0.14.14
+yarn_mappings=1.19.3+build.5
 
 # Mod Properties
 mod_version=1.8.0
@@ -20,7 +20,7 @@ brrp_version=0.8.2
 reasonable_sorting_version=2.1.0
 
 loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-#loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 #loom_fabric_repository=https://repository.hanbings.io/proxy/
