--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop/
-minecraft_version=1.19.3
-supported_minecraft_versions=1.19.3
+minecraft_version=23w07a
+supported_minecraft_versions=
 loader_version=0.14.14
-yarn_mappings=1.19.3+build.5
+yarn_mappings=23w07a+build.2
 
 # Mod Properties
 mod_version=1.8.0
@@ -14,13 +14,13 @@ maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.68.1+1.19.3
-modmenu_version=5.+
-brrp_version=0.8.2
-reasonable_sorting_version=2.1.0
+fabric_version=0.74.1+1.19.4
+modmenu_version=6.1.0-alpha.1
+brrp_version=0.9.0-build.1
+reasonable_sorting_version=
 
-loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 #loom_fabric_repository=https://repository.hanbings.io/proxy/
