--- a/gradle.properties
+++ b/gradle.properties
@@ -2,22 +2,21 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/develop/
-minecraft_version=23w07a
-supported_minecraft_versions=
-loader_version=0.14.14
-yarn_mappings=23w07a+build.3
+# check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
+minecraft_version=1.19.4-pre3
+supported_minecraft_versions=1.19.4-pre3
+loader_version=0.14.17
+yarn_mappings=1.19.4-pre3+build.4
 
 # Mod Properties
-mod_version=1.8.1-build.1
+mod_version=1.8.1-build.2
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-fabric_version=0.74.1+1.19.4
-modmenu_version=6.1.0-alpha.1
-brrp_version=0.9.0-build.1
-reasonable_sorting_version=
+fabric_version=0.75.2+1.19.4
+modmenu_version=6.1.0-beta.3
+brrp_version=0.9.0-build.2
 
 #loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
