--- a/gradle.properties
+++ b/gradle.properties
@@ -3,22 +3,24 @@ org.gradle.jvmargs=-Xmx1G
 loom.platform=forge
 
 # Fabric Properties
-# check these on https://linkie.shedaniel.me/dependencies
+# check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.18.2
 supported_minecraft_versions=1.18.2
 yarn_mappings=1.18.2+build.4
-forge_version=40.1.86
+forge_version=40.2.1
 
 # Mod Properties
-mod_version=1.8.0
+mod_version=1.8.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-brrp_version=0.8.2
+brrp_version=0.9.0
 reasonable_sorting_version=2.1.0
 
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
+# Loom Properties
+# If the build fails, try comment out or undo commenting some of the following lines.
+loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
