--- a/gradle.properties
+++ b/gradle.properties
@@ -7,21 +7,21 @@ loom.platform=forge
 minecraft_version=1.19.2
 supported_minecraft_versions=1.19,1.19.1,1.19.2
 yarn_mappings=1.19.2+build.28
-forge_version=43.2.7
+forge_version=43.2.8
 
 # Mod Properties
-mod_version=1.8.1
+mod_version=2.0.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-brrp_version=0.9.0
+brrp_version=1.0.0-beta.4
 reasonable_sorting_version=2.1.0
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+loom_libraries_base=https://download.mcbbs.net/maven/
+loom_resources_base=https://download.mcbbs.net/assets/
+loom_version_manifests=https://download.mcbbs.net/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-#loom_fabric_repository=https://repository.hanbings.io/proxy/
+loom_fabric_repository=https://repository.hanbings.io/proxy/
