--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version=0.14.17
 yarn_mappings=1.19.4+build.1
 
 # Mod Properties
-mod_version=1.8.1
+mod_version=1.9.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
@@ -17,11 +17,13 @@ archives_base_name=extshape
 fabric_version=0.76.0+1.19.4
 modmenu_version=6.1.0-rc.4
 brrp_version=0.9.0
+blockus_version=4437057
+terraform_version=6.0.0-beta.1
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-#loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+loom_libraries_base=https://download.mcbbs.net/maven/
+loom_resources_base=https://download.mcbbs.net/assets/
+loom_version_manifests=https://download.mcbbs.net/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
 #loom_fabric_repository=https://repository.hanbings.io/proxy/
