--- a/settings.gradle
+++ b/settings.gradle
@@ -7,7 +7,7 @@ pluginManagement {
         }
         maven { url "https://maven.architectury.dev/" }
 
-        maven { url "https://bmclapi2.bangbang93.com/maven/" }
+        maven { url "https://download.mcbbs.net/maven/" }
         maven { url "https://files.minecraftforge.net/maven/" }
 
         // 其余插件所存放的仓库
