--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,10 @@ loader_version=0.14.17
 yarn_mappings=1.19.4+build.1
 
 # Mod Properties
-mod_version=1.9.0
+mod_version=1.9.0-beta.1
 maven_group=pers.solid.extshape
 archives_base_name=extshape
+archives_base_name_blockus=extshape_blockus
 
 # Dependencies
 fabric_version=0.76.0+1.19.4
