--- a/gradle.properties
+++ b/gradle.properties
@@ -4,23 +4,23 @@ loom.platform=forge
 
 # Fabric Properties
 # check these on https://linkie.shedaniel.me/
-minecraft_version=1.19.3
-supported_minecraft_versions=1.19.3
-yarn_mappings=1.19.3+build.5
-forge_version=44.1.23
+minecraft_version=1.19.4
+supported_minecraft_versions=1.19.4
+yarn_mappings=1.19.4+build.1
+forge_version=45.0.42
 
 # Mod Properties
-mod_version=1.8.1
+mod_version=1.9.0
 maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-brrp_version=0.9.0
+brrp_version=1.0.0-beta.4
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
-#loom_libraries_base=https://bmclapi2.bangbang93.com/maven/
-loom_resources_base=https://bmclapi2.bangbang93.com/assets/
-loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest_v2.json
+loom_libraries_base=https://download.mcbbs.net/maven/
+loom_resources_base=https://download.mcbbs.net/assets/
+loom_version_manifests=https://download.mcbbs.net/mc/game/version_manifest_v2.json
 loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
-#loom_fabric_repository=https://repository.hanbings.io/proxy/
+loom_fabric_repository=https://repository.hanbings.io/proxy/
