--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,7 +1,7 @@
 # This is an example mods.toml file.
 # Any fields that aren't annotated with #optional are *required*!
 modLoader = "javafml"
-loaderVersion = "[44,)"
+loaderVersion = "[45,)"
 license = "LGPLv3" # Want to make your mod open source? Check out https://choosealicense.com/!
 
 # This is a URL to e.g. your GitHub or CurseForge issues page.
@@ -40,7 +40,7 @@ modId = "forge"
 mandatory = true # do you **need** this mod to be able to launch?
 # A version range using interval notation.
 # Brackets mean "inclusive" bounds, while parentheses mean "exclusive".
-versionRange = "[44,)" # This essentially means any forge >= @FORGE_LOADER_MAJOR@
+versionRange = "[45,)" # This essentially means any forge >= @FORGE_LOADER_MAJOR@
 ordering = "NONE" # Use this if you want your mod to be loaded specifically BEFORE or AFTER another mod
 side = "BOTH" # Specify where this mod is required: can be BOTH, CLIENT or SERVER
 
@@ -50,13 +50,13 @@ modId = "minecraft"
 mandatory = true
 # See above for how to read this notation, this essentially means any
 # version of Minecraft from @MINECRAFT@ (inclusive).
-versionRange = "[1.19.3,1.20)"
+versionRange = "[1.19.4,1.20)"
 ordering = "NONE"
 side = "BOTH"
 
 [[dependencies.extshape]]
-modId = "better_runtime_resource_pack"
+modId = "brrp_v1"
 mandatory = true
-versionRange = "[0.8.2,)"
+versionRange = "[1.0.0-beta.2,)"
 ordering = "NONE"
 side = "BOTH"
