--- a/build.gradle
+++ b/build.gradle
@@ -47,10 +47,7 @@ allprojects {
         // Fabric API
         modImplementation("net.fabricmc.fabric-api:fabric-api:${project.fabric_api_version}")
         // ModMenu 模组
-        modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}"){
-            exclude module: "fabric-loader"
-            transitive false
-        }
+        modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}")
 
         // 下面两个模组均存储于本地的 maven 仓库。
 
