--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,9 @@ archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.76.0+1.19.4
+fabric_api_version=0.78.0+1.19.4
 modmenu_version=6.1.0-rc.4
-brrp_version=1.0.0-beta.2
+brrp_version=1.0.0
 blockus_version=4483337
 terraform_version=6.0.0-beta.1
 
