--- a/gradle.properties
+++ b/gradle.properties
@@ -15,9 +15,9 @@ archives_base_name=extshape
 archives_base_name_blockus=extshape_blockus
 
 # Dependencies
-fabric_api_version=0.76.0+1.19.3
+fabric_api_version=0.76.1+1.19.3
 modmenu_version=5.1.0-beta.4
-brrp_version=1.0.0-beta.4
+brrp_version=1.0.0
 blockus_version=4411968
 terraform_version=5.0.0
 
