--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ archives_base_name_blockus=extshape_blockus
 # Dependencies
 fabric_api_version=0.76.0+1.19.2
 modmenu_version=4.2.0-beta.2
-brrp_version=1.0.0-beta.4
+brrp_version=1.0.0
 blockus_version=4458022
 terraform_version=4.2.0
 reasonable_sorting_version=2.1.0
