--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ maven_group=pers.solid.extshape
 archives_base_name=extshape
 
 # Dependencies
-brrp_version=1.0.0-beta.4
+brrp_version=1.0.0
 
 # Loom Properties
 # If the build fails, try comment out or undo commenting some of the following lines.
