--- a/gradle.properties
+++ b/gradle.properties
@@ -17,7 +17,7 @@ archives_base_name_blockus=extshape_blockus
 # Dependencies
 fabric_api_version=0.46.1+1.17
 modmenu_version=2.0.+
-brrp_version=1.0.0-beta.5
+brrp_version=1.0.0
 reasonable_sorting_version=2.1.0
 
 # Loom Properties
