--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ minecraft_version=1.19.3
 supported_minecraft_versions=1.19.3
 loader_version=0.14.19
 yarn_mappings=1.19.3+build.5
+fabric.loom.multiProjectOptimisation = true
 
 # Mod Properties
 mod_version=2.0.0
