--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 # check these on https://fabricmc.net/develop/ and https://linkie.shedaniel.me/
 minecraft_version=1.19.3
 supported_minecraft_versions=1.19.3
-loader_version=0.14.19
+loader_version=0.14.21
 yarn_mappings=1.19.3+build.5
 fabric.loom.multiProjectOptimisation = true
 
@@ -17,7 +17,7 @@ archives_base_name_blockus=extshape_blockus
 
 # Dependencies
 fabric_api_version=0.76.1+1.19.3
-modmenu_version=5.1.0-beta.4
+modmenu_version=5.0.0
 brrp_version=1.0.0
 blockus_version=4411968
 terraform_version=5.0.0
